# Zenith_Lib

./: CMakeLists.txt  README.md
doc/: porting_guide.md  rules.md
include/: zenith.h  zenith_cfg_def.h
include/zenith/: includes.h  settings.h  types.h
include/zenith/comms/: cdc.h  comms.h  gamecube.h  n64.h  n64_crc.h
include/zenith/input/: btn_remap.h  calib.h  linearize.h  notch_remap.h  stick.h
include/zenith/usb/: desc_bos.h  descriptors.h  tusb_config.h  usb.h  webusb.h
include/zenith/utilities/: interval.h  misc.h  running_avg.h
src/: settings.c  zenith.c
src/comms/: cdc.c  comms.c  gamecube.c  joybus.pio  n64.c
src/input/: btn_remap.c  calib.c  linearize.c  notch_remap.c  stick.c
src/usb/: desc_bos.c  descriptors.c  usb.c  webusb.c
src/utilities/: running_avg.c
